--- a/src/main/resources/templates/author/list_authors.html
+++ b/src/main/resources/templates/author/list_authors.html
@@ -19,11 +19,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/categories/">Categories</a>
-                </li><li class="nav-item">
-                <a class="nav-link" href="/editors/">Editors</a>
-            </li>
-
-
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/editors/">Editors</a>
                 </li>
             </ul>
         </div>
