--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,15 +19,54 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/categories/">Categories</a>
-                </li><li class="nav-item">
-                <a class="nav-link" href="/editors/">Editors</a>
-            </li>
-
-
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/editors/">Editors</a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-3">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Books</h5>
+                    <p class="card-text">View and administrate books</p>
+                    <a href="/books/" class="btn btn-primary">Go to books</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Categories</h5>
+                    <p class="card-text">View and administrate categories</p>
+                    <a href="/categories/" class="btn btn-primary">Go to categories</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Authors</h5>
+                    <p class="card-text">View and administrate authors</p>
+                    <a href="/authors/" class="btn btn-primary">Go to authors</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Editorial</h5>
+                    <p class="card-text">View and administrate editors</p>
+                    <a href="/books/" class="btn btn-primary">Go to editors</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
 </body>
 </html>
