Adding a links to connect pages

--- a/src/main/resources/templates/author/form_author.html
+++ b/src/main/resources/templates/author/form_author.html
@@ -37,7 +37,7 @@
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" th:field="*{name}">
         </div>
-
+        <a href="/authors/" class="btn btn-secondary mt-2">Return</a>
         <button type="submit" class="btn btn-primary mt-2">Save</button>
     </form>
 
