--- a/src/main/resources/templates/book/show_book_authors.html
+++ b/src/main/resources/templates/book/show_book_authors.html
@@ -36,5 +36,6 @@
     <ul class="list-group mt-3">
         <li th:each="author: ${authors}" class="list-group-item" th:text="${author.name}"></li>
     </ul>
+    <a href="/books/" class="btn btn-secondary mt-3">Return</a>
 </div>
 </html>
