--- a/src/main/resources/templates/category/form_category.html
+++ b/src/main/resources/templates/category/form_category.html
@@ -36,7 +36,8 @@
             <label for="name">Name</label>
             <input th:field="*{name}" type="text" class="form-control" id="name" required>
         </div>
-        <button type="submit" class="btn btn-primary">Save</button>
+        <a href="/categories/" class="btn btn-secondary mt-2">Return</a>
+        <button type="submit" class="btn btn-primary mt-2">Save</button>
     </form>
 </div>
 </body>
