--- a/src/main/resources/templates/editorial/show_books_editorial.html
+++ b/src/main/resources/templates/editorial/show_books_editorial.html
@@ -46,7 +46,7 @@
         </tr>
         </tbody>
     </table>
-    <a class="btn btn-success" href="/editors/">Return</a>
+    <a class="btn btn-secondary" href="/editors/">Return</a>
 </div>
 </body>
 </html>
