--- a/src/main/resources/templates/editorial/form_editorial.html
+++ b/src/main/resources/templates/editorial/form_editorial.html
@@ -36,6 +36,7 @@
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" th:field="*{name}" required>
         </div>
+        <a class="btn btn-secondary" href="/editors/">Return</a>
         <button type="submit" class="btn btn-primary mt-2">Save</button>
     </form>
 </div>
