--- a/src/main/resources/templates/editorial/show_editorial.html
+++ b/src/main/resources/templates/editorial/show_editorial.html
@@ -37,7 +37,7 @@
     <ul>
         <li th:each="book : ${books}" th:text="${book.title}"></li>
     </ul>
-    <a href="/editors/list" class="btn btn-success">Return</a>
+    <a href="/editors/list" class="btn btn-secondary">Return</a>
 </div>
 </body>
 </html>
